--- a/app/src/main/res/layout/save_layout.xml
+++ b/app/src/main/res/layout/save_layout.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:orientation="vertical"
+    android:padding="10dp"
     android:weightSum="1">
 
     <RelativeLayout
@@ -11,7 +12,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/saveText"
+            android:id="@+id/editTextSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
@@ -31,21 +32,22 @@
         android:rowCount="6">
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
+            android:id="@+id/btnCancel"
+            android:layout_width="185dp"
             android:layout_height="match_parent"
             android:layout_column="0"
             android:layout_row="1"
-            android:text="Button" />
+            android:text="Cancel" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
+            android:id="@+id/btnSave"
+            android:layout_width="185dp"
             android:layout_height="match_parent"
             android:layout_column="5"
             android:layout_row="1"
             android:layout_weight="1"
-            android:text="Button" />
+            android:width="@android:dimen/dialog_min_width_major"
+            android:text="Save" />
 
     </GridLayout>
 
