--- a/app/src/main/res/layout/save_layout.xml
+++ b/app/src/main/res/layout/save_layout.xml
@@ -1,54 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_centerInParent="true"
     android:orientation="vertical"
     android:padding="10dp"
     android:weightSum="1">
+    >
 
-    <RelativeLayout
+    <EditText
+        android:id="@+id/etSave"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <EditText
-            android:id="@+id/editTextSave"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_gravity="center"
-            android:layout_row="0"
-            android:layout_weight="1"
-            android:hint="Nom de la tournée"
-            android:inputType="text"
-            android:selectAllOnFocus="false"
-            android:textAlignment="center" />
-    </RelativeLayout>
-
-    <GridLayout
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnCount="6"
-        android:rowCount="6">
+        android:layout_column="0"
+        android:layout_gravity="top|center"
+        android:layout_row="0"
+        android:hint="Nom de la tournée"
+        android:inputType="text"
+        android:selectAllOnFocus="false"
+        android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="185dp"
-            android:layout_height="match_parent"
-            android:layout_column="0"
-            android:layout_row="1"
-            android:text="Cancel" />
+    <Button
+        android:id="@+id/btn_saveFichierName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:text="Save" />
 
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="185dp"
-            android:layout_height="match_parent"
-            android:layout_column="5"
-            android:layout_row="1"
-            android:layout_weight="1"
-            android:width="@android:dimen/dialog_min_width_major"
-            android:text="Save" />
+    <Button
+    android:id="@+id/btn_cancel"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="left"
+    android:text="Cancel" />
 
-    </GridLayout>
+
 
 </LinearLayout>
