--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -53,7 +53,14 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="0.46"
-            android:text="TextView" />
+            android:text="" />
+
+        <Button
+            android:id="@+id/btn_fin_position"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.46"
+            android:text="Recherche position" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
