--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:text="BI-LAT" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/radio_m_a"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
