--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gpsbom.plectre.com.gpsbom.LauncherActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <LinearLayout
         android:gravity="center"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="50dp"
+        android:padding="10dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp"
         android:weightSum="1">
@@ -23,10 +21,10 @@
             android:id="@+id/txt_titre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.46"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textSize="@dimen/titre" />
+            android:textSize="@dimen/h1"
+            android:layout_weight="0.22" />
 
         <Button
             android:id="@+id/btn_save"
@@ -35,32 +33,38 @@
             android:layout_gravity="center"
             android:elevation="6dp"
             android:gravity="center"
-            android:text="@string/save"
+            android:text="@string/demarrer_service"
             android:layout_margin="20dp"
             tools:layout_editor_absoluteX="23dp"
             tools:layout_editor_absoluteY="-149dp" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/image_satellite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/gps_on" />
+            app:srcCompat="@drawable/gps_off" />
 
         <TextView
             android:id="@+id/txt_gps_status"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0.46"
             android:gravity="center"
-            android:layout_weight="0.46"
-            android:text="" />
+            android:text=""/>
 
-        <Button
-            android:id="@+id/btn_fin_position"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.46"
-            android:text="Recherche position" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_fin_position"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/recherche_position" />
+
+        </LinearLayout>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
