--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,82 +6,113 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="63dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/txt_satus_gps"
-            android:gravity="center"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:ems="10" />
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textSize="@dimen/h1"
+            android:text="BOM GPS"/>
     </LinearLayout>
 
     <RadioGroup
         android:id="@+id/radio_group"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.33"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
 
         <RadioButton
             android:id="@+id/radio_hlp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:text="HLP" />
+            android:text="HLP"
+            android:textSize="@dimen/h1" />
 
         <RadioButton
             android:id="@+id/radio_ulat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+
             android:layout_weight="1"
-            android:text="U-LAT" />
+            android:text="U-LAT"
+            android:textSize="@dimen/h1" />
 
         <RadioButton
             android:id="@+id/radio_biLat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+
             android:layout_weight="1"
-            android:text="BI-LAT" />
+            android:text="BI-LAT"
+            android:textSize="@dimen/h1" />
 
         <RadioButton
             android:id="@+id/radio_m_a"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+
             android:layout_weight="1"
-            android:text="M-A" />
+            android:text="M-A"
+            android:textSize="@dimen/h1" />
 
     </RadioGroup>
 
     <LinearLayout
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="end"
+        android:layout_weight="0.33"
+
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/img_satellite"
+            android:layout_width="141dp"
+            android:layout_height="133dp"
+            android:layout_gravity="center"
+            android:background="@drawable/gps_off" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:orientation="horizontal"
-        android:padding="10dp"
-        android:weightSum="1">
+        android:layout_weight="0.33"
+
+        android:padding="5dp">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_weight="0.33"
-            android:text="Button" />
+            android:text="Stop" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_rec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_weight="0.33"
-            android:text="Button" />
+            android:text="Rec" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.33"
-            android:text="Button" />
     </LinearLayout>
 
 </LinearLayout>
