--- a/app/src/main/res/layout/save_layout.xml
+++ b/app/src/main/res/layout/save_layout.xml
@@ -26,14 +26,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:text="Save" />
+        android:text="@string/btn_save" />
 
     <Button
     android:id="@+id/btn_cancel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="left"
-    android:text="Cancel" />
+    android:text="@string/btn_annuler" />
 
 
 
