--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,7 @@
             android:id="@+id/txt_satus_gps"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin"
             android:layout_weight="1"
             android:gravity="center"
             android:text="BOM GPS"
@@ -105,6 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="@dimen/margin"
             android:background="@drawable/gps_off" />
     </LinearLayout>
 
