--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -2,5 +2,7 @@
 <resources>
     <dimen name="titre">25sp</dimen>
     <dimen name="h1">20sp</dimen>
+    <dimen name="margin">20dp</dimen>
+    <dimen name="padding">10dp</dimen>
 
 </resources>
