--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -29,20 +29,25 @@
         <Button
             android:id="@+id/btn_save"
             android:layout_width="match_parent"
+            android:background="@color/colorButton"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:elevation="6dp"
+            android:padding="@dimen/padding"
             android:gravity="center"
             android:text="@string/demarrer_service"
-            android:layout_margin="20dp"
+            android:layout_margin="@dimen/margin"
             tools:layout_editor_absoluteX="23dp"
             tools:layout_editor_absoluteY="-149dp" />
 
         <ImageView
             android:id="@+id/image_satellite"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="center"
+            android:scaleType="centerInside"
+            android:layout_margin="@dimen/margin"
+            android:padding="@dimen/padding"
             app:srcCompat="@drawable/gps_off" />
 
         <TextView
@@ -59,8 +64,10 @@
 
             <Button
                 android:id="@+id/btn_fin_position"
+                android:background="@color/colorButton"
+                android:padding="@dimen/padding"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="right"
                 android:text="@string/recherche_position" />
 
