--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_weight="0.33"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="@dimen/margin"
+        android:layout_weight="0.33"
         android:orientation="horizontal">
 
 
@@ -99,7 +100,7 @@
             android:gravity="center"
             android:text="BOM GPS"
             android:textAlignment="center"
-            android:textSize="@dimen/h1" />
+            android:textSize="@dimen/h1"/>
 
         <ImageView
             android:id="@+id/img_satellite"
@@ -111,24 +112,29 @@
     </LinearLayout>
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
-        android:layout_weight="0.33"
+        android:layout_weight="0.50"
 
-        android:padding="5dp">
+        android:padding="@dimen/padding">
 
         <Button
             android:id="@+id/btn_stop"
+            android:layout_margin="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="0.33"
+            android:background="@color/colorButton"
             android:text="Stop" />
 
         <Button
             android:id="@+id/btn_rec"
+            android:layout_margin="2dp"
+            android:background="@color/colorButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
