--- a/app/src/main/res/layout/save_layout.xml
+++ b/app/src/main/res/layout/save_layout.xml
@@ -23,6 +23,8 @@
 
     <Button
         android:id="@+id/btn_saveFichierName"
+        android:layout_margin="@dimen/margin"
+        android:background="@color/colorButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
@@ -30,6 +32,8 @@
 
     <Button
     android:id="@+id/btn_cancel"
+    android:layout_margin="@dimen/margin"
+    android:background="@color/colorButton"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="left"
