--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#49b53f</color>
-    <color name="colorPrimaryDark">#319f44</color>
+    <color name="colorPrimary">#388631</color>
+    <color name="colorPrimaryDark">#204025</color>
     <color name="colorAccent">#319f44</color>
     <color name="red">#861d24</color>
+    <color name="colorButton">#7d0f9c0f</color>
+    <color name="textColor">#ff000000</color>
 </resources>
