Glider de controle des parametres du GPs

--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="titre">25sp</dimen>
-    <dimen name="h1">20sp</dimen>
+    <dimen name="h1">15sp</dimen>
     <dimen name="margin">20dp</dimen>
     <dimen name="padding">10dp</dimen>
+    <dimen name = "padding_radio">5dp</dimen>
 
 </resources>
