--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -7,74 +7,134 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:weightSum="1">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true">
 
 
         <TextView
             android:id="@+id/txt_titre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.1"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textSize="@dimen/h1"
-            android:layout_weight="0.22" />
+            android:textSize="@dimen/h1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/delta_metre"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/delta_seconde"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txt_location"
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1" />
+
+                <TextView
+                    android:id="@+id/txt_time"
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:orientation="horizontal">
+
+
+                <SeekBar
+                    android:id="@+id/sb_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="25"
+                    android:layout_weight="0.1" />
+
+                <SeekBar
+                    android:id="@+id/sb_time"
+                    android:max="30"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txt_gps_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:gravity="center"
+            android:text="" />
 
         <Button
             android:id="@+id/btn_save"
             android:layout_width="match_parent"
-            android:background="@color/colorButton"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="@dimen/margin"
+            android:layout_weight="0.1"
+            android:background="@color/colorButton"
             android:elevation="6dp"
             android:padding="@dimen/padding"
-            android:gravity="center"
             android:text="@string/demarrer_service"
-            android:layout_margin="@dimen/margin"
             tools:layout_editor_absoluteX="23dp"
             tools:layout_editor_absoluteY="-149dp" />
 
-        <ImageView
-            android:id="@+id/image_satellite"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/margin"
-            android:contentDescription="img_satt"
-            android:padding="@dimen/padding"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/gps_off"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:id="@+id/txt_gps_status"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_fin_position"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.46"
-            android:gravity="center"
-            android:text=""/>
+            android:layout_margin="@dimen/margin"
+            android:layout_weight="0.1"
+            android:background="@color/colorButton"
+            android:padding="@dimen/padding"
+            android:text="@string/recherche_position"
+            tools:ignore="RtlHardcoded" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/btn_fin_position"
-                android:background="@color/colorButton"
-                android:padding="@dimen/padding"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:text="@string/recherche_position"
-                tools:ignore="RtlHardcoded" />
-
-        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
