--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -21,7 +21,8 @@
             android:layout_gravity="left"
             android:layout_weight="0.5"
             android:gravity="center"
-            android:textSize="15sp" />
+            android:maxLength="10"
+            android:textSize="@dimen/textView" />
 
         <TextView
             android:id="@+id/txt_longitude"
@@ -29,8 +30,9 @@
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:layout_weight="0.5"
+            android:maxLength="10"
             android:gravity="center"
-            android:textSize="15sp" />
+            android:textSize="@dimen/textView" />
 
     </LinearLayout>
 
@@ -38,18 +40,19 @@
         android:id="@+id/radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.33"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:layout_weight="0.26"
+        android:orientation="horizontal">
 
 
         <RadioButton
             android:id="@+id/radio_hlp"
+            android:maxLines="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:text="HLP"
+            android:padding="@dimen/padding_radio"
+            android:text="@string/haut_le_pieds"
             android:textSize="@dimen/h1" />
 
         <RadioButton
@@ -57,9 +60,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-
+            android:padding="@dimen/padding_radio"
             android:layout_weight="1"
-            android:text="U-LAT"
+            android:text="@string/uni_lateral_droit"
             android:textSize="@dimen/h1" />
 
         <RadioButton
@@ -69,7 +72,7 @@
             android:layout_gravity="bottom"
 
             android:layout_weight="1"
-            android:text="BI-LAT"
+            android:text="@string/bi_lateral"
             android:textSize="@dimen/h1" />
 
         <RadioButton
@@ -77,9 +80,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-
+            android:padding="@dimen/padding_radio"
             android:layout_weight="1"
-            android:text="M-A"
+            android:text="@string/marche_arriere"
             android:textSize="@dimen/h1" />
 
     </RadioGroup>
@@ -96,7 +99,7 @@
             android:id="@+id/txt_plot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"/>
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/txt_satus_gps"
@@ -105,17 +108,26 @@
             android:layout_margin="@dimen/margin"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="BOM GPS"
+            android:text="@string/init_status_gps"
             android:textAlignment="center"
             android:textSize="@dimen/h1" />
+        <!--
+                <ImageView
+                    android:id="@+id/img_satellite"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/margin"
+                    android:background="@drawable/probe" />
+                    -->
 
-        <ImageView
-            android:id="@+id/img_satellite"
+        <TextView
+            android:id="@+id/txt_typeDeCollecte"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/margin"
-            android:background="@drawable/gps_off" />
+            android:text="@string/tirets"
+            android:textSize="75sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -136,7 +148,7 @@
             android:layout_margin="2dp"
             android:layout_weight="0.33"
             android:background="@color/colorButton"
-            android:text="Stop" />
+            android:text="@string/stop" />
 
         <Button
             android:id="@+id/btn_rec"
@@ -146,7 +158,7 @@
             android:layout_margin="2dp"
             android:layout_weight="0.33"
             android:background="@color/colorButton"
-            android:text="Rec" />
+            android:text="@string/record" />
 
     </LinearLayout>
 
