--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorButton">#7d0f9c0f</color>
     <color name="textColor">#ff000000</color>
     <color name="btnPointNoir">#303333</color>
+    <color name="white">#ffffff</color>
 </resources>
