--- a/app/src/main/res/layout/save_layout.xml
+++ b/app/src/main/res/layout/save_layout.xml
@@ -23,7 +23,7 @@
     <Button
         android:id="@+id/btn_saveFichierName"
         android:layout_margin="@dimen/margin"
-        android:background="@color/colorButton"
+        android:background="@drawable/custom_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
@@ -32,7 +32,7 @@
     <Button
     android:id="@+id/btn_cancel"
     android:layout_margin="@dimen/margin"
-    android:background="@color/colorButton"
+    android:background="@drawable/custom_button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="left"
