--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -125,6 +126,7 @@
             android:id="@+id/txt_plot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:textAlignment="center"
             android:textSize="@dimen/h2" />
 
@@ -132,9 +134,7 @@
             android:id="@+id/txt_satus_gps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="@string/init_status_gps"
             android:textAlignment="center"
             android:textSize="@dimen/h2" />
@@ -178,7 +178,8 @@
             android:layout_margin="2dp"
             android:layout_weight="0.33"
             android:background="@drawable/custom_button"
-            android:text="@string/stop" />
+            android:text="@string/stop"
+            tools:ignore="ButtonStyle" />
 
         <Button
             android:id="@+id/btn_rec"
