--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorButton"/>
+    <size android:width="@dimen/cornerRound"/>
     <corners android:radius="@dimen/cornerRound"/>
+    <stroke android:width="2dp"/>
+    <stroke android:color="@color/colorAccent"/>
 </shape>
