--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -22,6 +22,7 @@
             android:layout_gravity="center"
             android:layout_weight="0.1"
             android:gravity="center"
+            android:padding="5dp"
             android:text="@string/app_name"
             android:textSize="@dimen/h1" />
 
@@ -51,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="0"
+                    android:text="@string/hyper_urbain"
                     android:textSize="@dimen/h1" />
             </LinearLayout>
 
@@ -70,6 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="0.1"
+                    android:animationResolution="@android:integer/status_bar_notification_info_maxnum"
                     android:max="50"
                     android:padding="@dimen/cornerRound"
                     android:thumb="@drawable/custom_seekbar" />
@@ -130,9 +132,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:gravity="center"
-            android:text="By Plectre"
+            android:text="@string/by_plectre"
             android:textColor="@color/footer" />
 
+        <TextView
+            android:id="@+id/version"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:gravity="center"
+            android:text="@string/version"
+            android:textColor="@color/footer" />
 
     </LinearLayout>
 
