--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#204025</color>
     <color name="colorAccent">#319f44</color>
     <color name="background">#cfecd4</color>
-    <color name="footer">#97faa8</color>
+    <color name="footer">#06a501</color>
     <color name="red">#861d24</color>
     <color name="colorButton">#7d0f9c0f</color>
     <color name="textColor">#ff000000</color>
