--- a/app/src/main/res/drawable/custom_seekbar.xml
+++ b/app/src/main/res/drawable/custom_seekbar.xml
@@ -8,8 +8,8 @@
                 android:width="20dp" />
             <solid android:color="@color/colorButton" />
             <corners android:radius="@dimen/cornerRound" />
-            <stroke android:width="2dp"/>
-            <stroke android:color="@color/colorAccent"/>
+            <stroke android:width="1dp"/>
+            <stroke android:color="@color/white"/>
         </shape>
     </item>
     <item android:drawable="@color/colorButton" />
