--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/background">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -105,7 +107,7 @@
             android:layout_margin="@dimen/margin"
             android:layout_weight="0.1"
             android:background="@drawable/custom_button"
-            android:elevation="6dp"
+            android:elevation="16dp"
             android:foreground="@drawable/custom_button"
             android:gravity="center"
             android:padding="@dimen/padding"
